--- a/css/style.css
+++ b/css/style.css
@@ -180,36 +180,36 @@ search-form{
     font-size: 5rem;
 }
 
-.home .home-slider .slide{
+.home .mySwiper .swiper-slide{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     gap: 2rem;
     padding-top: 9rem;
 }
-.home .home-slider .slide .content{
+.home .mySwiper .swiper-slide .content{
     flex:1 1 45rem;
 }
 
-.home .home-slider .slide .image{
+.home .mySwiper .swiper-slide .image{
     flex:1 1 45rem;
 }
 
-.home .home-slider .slide .image img{
+.home .mySwiper .swiper-slide .image img{
     width: 100%;
 }
 
-.home .home-slider .slide .content span{
+.home .mySwiper .swiper-slide .content span{
     color:var(--green);
     font-size: 2.5rem;
 }
 
-.home .home-slider .slide .content h3{
+.home .mySwiper .slide .content h3{
     color:var(--black);
     font-size: 7rem;
 }
 
-.home .home-slider .slide .content p{
+.home .mySwiper .swiper-slide .content p{
     color:var(--light-color);
     font-size: 2.2rem;
     padding:.5rem 0;
